--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>G3 Architects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="hero-section">
+        <nav class="container">
+            <div>
+                <h2>G3 Architects</h2>
+ 
+            </div>
+            <div>
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Contact Us</a>
+                <a href="">Login</a>
+
+            </div>
+        </nav>
+        <!-- nav section end  -->
+
+
+        <!-- banner section start  -->
+
+        <div class="banner container">
+            <div class="top-banner">
+                <h1>Brand New <br>
+                    Group of Architects </h1>
+                <p>An architect is a person who plans, designs and oversees the construction of buildings. <br> To practice architecture means to provide services in connection with the design of buildings</p>
+                <button class="top-btn">
+                    Explore More
+
+                </button>
+
+            </div>
+            <div class="bottom-banner">
+
+                <img src="./images/banner.png" alt="">
+
+            </div>
+        </div>
+
+    </section>
     
 </body>
 </html>
