banner section end

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="hero-section">
         <nav class="container">
             <div>
-                <h2>G3 Architects</h2>
+                <h2><span>G3</span> Architects</h2>
  
             </div>
             <div>
@@ -30,7 +30,7 @@
         <div class="banner container">
             <div class="top-banner">
                 <h1>Brand New <br>
-                    Group of Architects </h1>
+                    Group of <span>Architects</span> </h1>
                 <p>An architect is a person who plans, designs and oversees the construction of buildings. <br> To practice architecture means to provide services in connection with the design of buildings</p>
                 <button class="top-btn">
                     Explore More
