--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
  
             </div>
             <div>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Contact Us</a>
-                <a href="">Login</a>
+                <a href="" class="hover-btn ">Home</a>
+                <a href="" class="hover-btn">About</a>
+                <a href="" class="hover-btn">Contact Us</a>
+                <a href="" class="hover-btn">Login</a>
 
             </div>
         </nav>
@@ -32,7 +32,7 @@
                 <h1>Brand New <br>
                     Group of <span>Architects</span> </h1>
                 <p>An architect is a person who plans, designs and oversees the construction of buildings. <br> To practice architecture means to provide services in connection with the design of buildings</p>
-                <button class="top-btn">
+                <button class="top-btn pri-btn hover-btn">
                     Explore More
 
                 </button>
@@ -46,6 +46,64 @@
         </div>
 
     </section>
+
+    <article class="top-article container">
+        <div class=" item item1"><img src="./images/team1.png" alt=""></div>
+        <div class="item item2"><img src="./images/team2.png" alt=""></div>
+        <div class="item item3"><img src="./images/team3.png" alt=""></div>
+        <div class="item item4"><img src="./images/team4.png" alt=""></div>
+        <div class=" item5">
+            <div>
+                <h6 class="h2"><span class="
+                    gray-text">Quick list</span> of Our <br>  <span>Features</span></h6>
+            <p class="p ">An architect is a person who plans, designs and oversees the construction of buildings. To practice architecture means to provide services in connection with the design of buildings and the space within the site surrounding the buildings that have human occupancy or use as their principal purpose.</p>
+            <button class="pri-btn hover-btn">Explore More</button>
+            </div>
+        </div>
+    </article>
+    <!-- top article end  -->
+    <!-- Features section start  -->
+    <article  class="Features container">
+        <div>
+            <section class="text-section">
+                <h1 class="h2">Features you will <br> love & enjoy</h1>
+                <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings and  <br> the space within the site surrounding the buildings that have <br> human occupancy or use as their principal purpose.</p>
+                <div class="card">
+                    <div>
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings 
+                        </p class="p">
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <h4>Drag & Drop Builder</h4>
+                        <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <h4>Awesome Modern Design</h4>
+                        <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <h4>Super Easy to Edit</h4>
+                        <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings</p>
+                    </div>
+                </div>
+    
+            </section>
+        </div>
+        <section class="banner-section">
+            <img src="./images/architect.png" alt="">
+
+        </section>
+
+    </article>
+
+    <!-- banner section end  -->
     
 </body>
 </html>
