--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </article>
     <!-- top article end  -->
     <!-- Features section start  -->
-    <article  class="Features container">
+    <article  class="features container">
         <div>
             <section class="text-section">
                 <h1 class="h2">Features you will <br> love & enjoy</h1>
@@ -105,7 +105,7 @@
 
     <!-- banner section end  -->
 
-    <section class="Some Facts container">
+    <section class="some-facts container">
         <div>
             <h1 class="h2" style="margin-bottom: 15px;">Some Facts</h1>
         <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings</p>
@@ -145,6 +145,8 @@
     </section>
     <!-- facts section end  -->
 
+<!-- section Sponspors start  -->
+<section class="sponspors"></section>
 
     
 </body>
