project done without responsive

--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
             </section>
         </div>
         <section class="banner-section">
-            <section class="ten-year">
-                <div> <h1>10+Year</h1></div>
+            <section class="ten-year hover-btn ">
+                <div > <h1>10+Year</h1>
+                <p>Experience</p></div>
                </section>
             
             <img src="./images/architect.png" alt="">
@@ -181,7 +182,7 @@
         </div>
         <div class="other-info">
 
-            <h6 class="a"><a href="">Terms of Service</a>
+            <h6 class="a "><a href="">Terms of Service</a>
             </h6>
             <h6 class="b"><a href="">Contact Us</a></h6>
             <h6 class="c"><a href="">Privacy Policy</a></h6>
@@ -201,8 +202,8 @@
             </div>
         </div>
 
-        <div>
-            <h5 style="color: rgb(212, 212, 212); text-align: center; margin-top: 10%;">All rights reserved copyright@2023 startup landing page design</h5>
+        <div class="copy-right">
+            <h5 style="color: rgb(0, 0, 0); text-align: center; margin-top: 2%;">All rights reserved copyright@2023 startup landing page design</h5>
         </div>
 
 
