--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                 <div class="card">
                     <div>
                         <h4>Super Easy to Edit</h4>
-                        <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildings</p>
+                        <p class="p">An architect is a person who plans, designs and oversees the <br> construction of buildings. To practice architecture means to <br> provide services in connection with the design of buildigitngs</p>
                     </div>
                 </div>
     
             </section>
         </div>
         <section class="banner-section">
-            <section class="ten-year hover-btn ">
+            <section class="ten-year  ">
                 <div > <h1>10+Year</h1>
                 <p>Experience</p></div>
                </section>
