--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </section>
         </div>
         <section class="banner-section">
-            <section class="ten-year  ">
+            <section class="ten-year hover-btn  ">
                 <div > <h1>10+Year</h1>
                 <p>Experience</p></div>
                </section>
