responsive nav done

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <section class="hero-section">
-        <nav class="container">
+        <nav class="container responsive-nav">
             <div>
                 <h2><span>G3</span> Architects</h2>
  
             </div>
-            <div>
+            <div class="ancor">
                 <a href="" class="hover-btn ">Home</a>
                 <a href="" class="hover-btn">About</a>
                 <a href="" class="hover-btn">Contact Us</a>
