--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
     </article>
 
-    <section class="ten-year-mobile-flex">
-        <div class="ten-year-mobile    " >
+    <section class="ten-year-mobile-flex  ">
+        <div class="ten-year-mobile hover-btn   " >
             <div > <div>
                 <h1>10+Year</h1>
             <p>Experience</p></div>
